# pairProgramming

./: README.md
src/: CMakeLists.txt  FindDialog.cpp  FindDialog.h  MainWindow.cpp  MainWindow.h  QuickDialog.cpp  QuickDialog.h  main.cpp
translations/: ned_hu.qm  ned_hu.ts
